force-app/main/default/objects/Trial_Template__c/Trial_Template__c.object-meta.xml
<CustomObject>
    <label>Trial Template</label>
    <nameField>
        <label>Trial Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>