force-app/main/default/objects/Trial_Template__c/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>