force-app/main/default/objects/Trial_Template__c/fields/Trial_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Trial_Template_Id__c</fullName>
    <label>Trial Template Id</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>