force-app/main/default/objects/Trial_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Trial_Template_Id__c</columns>
    <columns>Trial_Source_Org_Id__c</columns>
    <columns>Internal_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>